--- a/src/app.css
+++ b/src/app.css
@@ -1,5 +1,6 @@
 body {
   font-family: Roboto, 'Helvetica Neue', sans-serif;
+  margin: 0; /* Quick body margin reset */
 }
 
 /* Helps fonts on OSX looks more consistent with other systems */
