Add slide toggle examples

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,6 +32,11 @@
     </md-card>
 
     <md-card>
+      <md-slide-toggle > Default Slide Toggle </md-slide-toggle>
+      <md-slide-toggle disabled> Disabled Slide Toggle </md-slide-toggle>
+    </md-card>
+
+    <md-card>
       <md-radio-button name="symbol">Alpha</md-radio-button>
       <md-radio-button name="symbol">Beta</md-radio-button>
       <md-radio-button name="symbol" disabled>Gamma</md-radio-button>
