--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,9 +4,8 @@ body {
   margin: 0;
 }
 
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
-
-@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import url("../node_modules/@angular/material/prebuilt-themes/indigo-pink.css");
+// @import url("../node_modules/material-design-icons/iconfont/material-icons.css");
 
 /* fallback */
 @font-face {
