--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,29 +4,8 @@ body {
   margin: 0;
 }
 
-@import url("../node_modules/@angular/material/prebuilt-themes/indigo-pink.css");
-// @import url("../node_modules/material-design-icons/iconfont/material-icons.css");
-
-/* fallback */
-@font-face {
-  font-family: 'Material Icons';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://fonts.gstatic.com/s/materialicons/v22/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
-}
-
-.material-icons {
-  font-family: 'Material Icons';
-  font-weight: normal;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 1;
-  letter-spacing: normal;
-  text-transform: none;
-  display: inline-block;
-  white-space: nowrap;
-  word-wrap: normal;
-  direction: ltr;
-  -webkit-font-feature-settings: 'liga';
-  -webkit-font-smoothing: antialiased;
-}
+// @import url('../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css');
+@import url('../node_modules/@angular/material/prebuilt-themes/indigo-pink.css');
+// @import url('../node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css');
+// @import url('../node_modules/@angular/material/prebuilt-themes/purple-green.css');
+@import url('../node_modules/material-design-icons/iconfont/material-icons.css');
