--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,8 @@ body {
 // @import url('../node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css');
 // @import url('../node_modules/@angular/material/prebuilt-themes/purple-green.css');
 @import url('../node_modules/material-design-icons/iconfont/material-icons.css');
+
+@import url('../node_modules/primeng/resources/themes/omega/theme.css');
+@import url('../node_modules/primeng/resources/primeng.min.css');
+@import url('../node_modules/font-awesome/css/font-awesome.min.css');
+
